--- a/packages.config
+++ b/packages.config
@@ -9,6 +9,7 @@
   <package id="IronPython" version="3.4.1" targetFramework="net48" />
   <package id="IronPython.Interpreter" version="2.7.4" targetFramework="net48" />
   <package id="IronPython.StdLib" version="3.4.1" targetFramework="net48" />
+  <package id="Markdig" version="0.33.0" targetFramework="net48" />
   <package id="MessagePack" version="2.3.85" targetFramework="net48" />
   <package id="MessagePack.Annotations" version="2.3.85" targetFramework="net48" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net48" />
@@ -62,6 +63,7 @@
   <package id="Microsoft.VisualStudio.Utilities" version="17.3.32804.24" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Utilities.Internal" version="16.3.36" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Validation" version="17.0.64" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2045.28" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="Nerdbank.Streams" version="2.8.57" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
