--- a/packages.config
+++ b/packages.config
@@ -10,6 +10,7 @@
   <package id="IronPython.Interpreter" version="2.7.4" targetFramework="net48" />
   <package id="IronPython.StdLib" version="3.4.1" targetFramework="net48" />
   <package id="Markdig" version="0.33.0" targetFramework="net48" />
+  <package id="Markdown" version="2.2.1" targetFramework="net48" />
   <package id="MessagePack" version="2.3.85" targetFramework="net48" />
   <package id="MessagePack.Annotations" version="2.3.85" targetFramework="net48" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net48" />
