--- a/IDE.csproj
+++ b/IDE.csproj
@@ -116,6 +116,9 @@
       <HintPath>packages\Markdig.0.33.0\lib\net462\Markdig.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Markdown, Version=2.0.0.0, Culture=neutral, PublicKeyToken=1b320cc08ad5aa89, processorArchitecture=MSIL">
+      <HintPath>packages\Markdown.2.2.1\lib\net451\Markdown.dll</HintPath>
+    </Reference>
     <Reference Include="MessagePack, Version=2.3.0.0, Culture=neutral, PublicKeyToken=b4a0369545f0a1be, processorArchitecture=MSIL">
       <HintPath>packages\MessagePack.2.3.85\lib\netstandard2.0\MessagePack.dll</HintPath>
       <Private>True</Private>
