--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="AvalonEdit.Sample" version="5.0.3" targetFramework="net48" />
   <package id="Azure.Core" version="1.36.0" targetFramework="net48" />
   <package id="Azure.Identity" version="1.10.4" targetFramework="net48" />
+  <package id="Downloader" version="3.0.6" targetFramework="net48" />
   <package id="DynamicLanguageRuntime" version="1.3.4" targetFramework="net48" />
   <package id="Humanizer.Core" version="2.14.1" targetFramework="net48" />
   <package id="IronPython" version="3.4.1" targetFramework="net48" />
